Added back in includes to separate js files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<!-- List Sorting -->
 	<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.6.1/Sortable.min.js"></script>
 	<script type = "text/javascript" src = "backgrounds.json"></script>
-	<script type = "text/javascript" src = "scripts.js"></script>
+	<script type = "text/javascript" src = "notes.js"></script>
+	<script type = "text/javascript" src = "scrapers.js"></script>
+	<script type = "text/javascript" src = "utils.js"></script>
 	<link rel="stylesheet" type="text/css" href="formatting.css">
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.8.3/katex.min.js"></script>
