--- a/edit_note.html
+++ b/edit_note.html
@@ -43,9 +43,7 @@
   <!-- List Sorting -->
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.6.1/Sortable.min.js"></script>
   <script type = "text/javascript" src = "backgrounds.json"></script>
-  <script type = "text/javascript" src = "notes.js"></script>
-  <script type = "text/javascript" src = "scrapers.js"></script>
-  <script type = "text/javascript" src = "utils.js"></script>
+  <script type = "text/javascript" src = "loaders.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.8.3/katex.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.8.3/contrib/auto-render.min.js"></script>
   <script type="text/javascript">
