--- a/edit_todo.html
+++ b/edit_todo.html
@@ -11,9 +11,6 @@
 </head>
 
 <body>
-<!--Add buttons to initiate auth sequence and sign out-->
-<button id="authorize_button" style="display: none;">Authorize</button>
-<button id="signout_button" style="display: none;">Sign Out</button>
   <div id="overlay" class="fade"></div>
 
   <div id="todo" class="wide_area fade">
@@ -40,6 +37,11 @@
     </ul>
   </div>
 
+  <div class="footer">
+    <!--Add buttons to initiate auth sequence and sign out-->
+    <button id="authorize_button">Authorize</button>
+    <button id="signout_button" style="display: none;">Sign Out</button>
+  </div>
   <!-- List Sorting -->
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.6.1/Sortable.min.js"></script>
   <script type = "text/javascript" src = "backgrounds.json"></script>
