--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="list_wrapper">
       <ul id="todo_list" class="invisible fade"></ul>
     </div>
-    <div class="spinner" id="note_spinner">
+    <div class="spinner" id="todo_spinner">
       <div class="circle1"></div>
       <div class="circle2"></div>
       <div class="circle3"></div>
