--- a/index.html
+++ b/index.html
@@ -45,16 +45,28 @@
   <div class="group">
     <div id="AskReddit_panel" class="post_area">
       <a href="https://www.reddit.com/r/AskReddit" class="no_underline">
-                          <div class="section_header reddit_header">AskReddit</div>
-                        </a>
-      <div id="AskReddit_posts" class="list_wrapper invisible fade"></div>
+        <div class="section_header reddit_header">AskReddit</div>
+      </a>
+      <div id="AskReddit_posts" class="list_wrapper invisible fade">
+      </div>
+      <div class="spinner" id="askreddit_spinner">
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+      </div>
     </div>
 
     <div id="hackernews_panel" class="post_area">
       <a href="https://news.ycombinator.com/news" class="no_underline">
-                          <div class="section_header hackernews_header">HackerNews</div>
-                        </a>
-      <div id="hackernews_posts" class="list_wrapper invisible fade"></div>
+        <div class="section_header hackernews_header">HackerNews</div>
+      </a>
+      <div id="hackernews_posts" class="list_wrapper invisible fade">
+      </div>
+      <div class="spinner" id="hackernews_spinner">
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+      </div>
     </div>
   </div>
 
