Removed extra space around spinners
Made post lists not display before they're loaded instead of just
being invisible. This makes the spacing around the spinners nicer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </a>
 
     <div class="list_wrapper">
-      <ul id="note_list" class="invisible fade"></ul>
+      <ul id="note_list" class="invisible fade" style="display:none;"></ul>
       <div class="spinner" id="note_spinner">
         <div class="circle1"></div>
         <div class="circle2"></div>
@@ -33,7 +33,7 @@
     </a>
 
     <div class="list_wrapper">
-      <ul id="todo_list" class="invisible fade"></ul>
+      <ul id="todo_list" class="invisible fade" style="display:none;"></ul>
     </div>
     <div class="spinner" id="todo_spinner">
       <div class="circle1"></div>
@@ -52,7 +52,7 @@
         <div class="circle2"></div>
         <div class="circle3"></div>
       </div>
-      <div id="AskReddit_posts" class="list_wrapper invisible fade">
+      <div id="AskReddit_posts" class="list_wrapper invisible fade" style="display:none;">
       </div>
     </div>
 
@@ -65,7 +65,7 @@
         <div class="circle2"></div>
         <div class="circle3"></div>
       </div>
-      <div id="hackernews_posts" class="list_wrapper invisible fade">
+      <div id="hackernews_posts" class="list_wrapper invisible fade" style="display:none;">
       </div>
     </div>
   </div>
