Added text encoding tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=MML_CHTML">
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <title>Home</title>
 </head>
 <body onload="load_posts();">
